# pseudo-term

./: Cargo.toml  README.md
examples/single_obj/: Cargo.toml
examples/single_obj/src/: main.rs
examples/window/: Cargo.toml
examples/window/src/: main.rs
src/: bg_shader.wgsl  env.rs  lib.rs  obj.rs
